Fix wrong font variable in header contact-button: tablet-button-small instead of tablet-button

--- a/assets/styles/tablet.css
+++ b/assets/styles/tablet.css
@@ -16,7 +16,7 @@ header{
 .header__contact-button{
     width: 50px;
     height: 20px;
-    font-size: var(--tablet-button);
+    font-size: var(--tablet-button-small);
     margin-left: 25px;
     margin-right: 40px;
 }
